# Operit

./: .gitignore  .gitmodules  README(E).md  README.md  chinese_strings_detailed.txt  packages_whitelist.txt  settings.gradle.kts  sync_example_packages.py
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/streamnative/: StreamOperators.cpp
app/src/main/cpp/streamnative/plugins/: StreamXmlPlugin.cpp  StreamXmlPlugin.h
docs/: DEFAULT_TOOLS_ARCH.md  SCRIPT_DEV_GUIDE.md  TOOLPKG_FORMAT_GUIDE.md  WEB_SESSION_TOOLS_PLAN.md  character_group_card_plan.md  deepseek_thinking.md  external_intent_chat.md  pc-control-by-package.md
examples/: all_about_myself.js  all_about_myself.ts  automatic_baidu_map_assistant.js  automatic_baidu_map_assistant.ts  automatic_bilibili_assistant.js  automatic_bilibili_assistant.ts  automatic_ui_base.ts  automatic_ui_subagent.js  automatic_ui_subagent.ts  beeimg_image_uploader.js  beeimg_image_uploader.ts  code_runner.js  code_runner.ts  daily_life.ts  douyin_download.js  douyin_download.ts  extended_chat.ts  extended_http_tools.js  extended_http_tools.ts  extended_memory_tools.js  extended_memory_tools.ts  ffmpeg.ts  github.js  history_chat.ts  jmcomic.js  jmcomic.ts  nanobanana_draw.js  nanobanana_draw.ts  openai_draw.js  openai_draw.ts  pollinations_draw.js  pollinations_draw.ts  qwen_draw.js  qwen_draw.ts  super_admin.js  super_admin.ts  various_search.ts  web.js  web.ts  windows_control.ts  (+4 more)
examples/apktool/: manifest.json
examples/github/src/: index.js  index.ts
examples/linux_ssh/: manifest.json  tsconfig.json
examples/types/: chat.d.ts  compose-dsl.d.ts  compose-dsl.material3.generated.d.ts  index.d.ts  memory.d.ts  network.d.ts  results.d.ts  software_settings.d.ts  system.d.ts  tool-types.d.ts  ui.d.ts
examples/windows_control/: manifest.json
examples/windows_control/i18n/: en-US.js  en-US.ts  types.ts  zh-CN.js  zh-CN.ts
mmd/: CMakeLists.txt
tools/: package_operit_pc_agent_asset.py
tools/compose_dsl/: README.md  generate_compose_dsl_artifacts.py
tools/compose_dsl/templates/: ToolPkgComposeDslGeneratedRenderers.kt.tpl
tools/operit-pc-agent/: README.md  operit_pc_agent.bat  package.json
tools/operit-pc-agent/data/: config.example.json
tools/operit-pc-agent/public/: index.html
tools/string/: count_ui_strings.py
(+289 files in other folders)
